--- a/flixHunters/index.html
+++ b/flixHunters/index.html
@@ -22,11 +22,15 @@
     <div>
         <header>
             <h1>Maturity ratings through the years: a Netflix analysis</h1>
-            <div>Names: Tayler Tolman</div>
+            <div>Names: Tayler Tolman, Albert Frei</div>
         </header>
     </div>
     <div style="text-align:center">
-      <svg id="lineGraphSVG" ></svg>
+      <svg id="lineGraphSVG">
+        <g id="x-axis"></g>
+        <g id="y-axis"></g>
+        <g id="lines"></g>
+      </svg>
       <svg id="donutSVG"></svg>
     </div>
     <div style="text-align:center">
