Added BarGraph html

--- a/flixHunters/index.html
+++ b/flixHunters/index.html
@@ -22,7 +22,7 @@
     <div>
         <header>
             <h1>Maturity ratings through the years: a Netflix analysis</h1>
-            <div>Names: Tayler Tolman, Albert Frei</div>
+            <div>Names: Tayler Tolman, Albert Frei, Gregorius Sukiman</div>
         </header>
     </div>
     <div style="text-align:center">
@@ -34,7 +34,11 @@
       <svg id="donutSVG"></svg>
     </div>
     <div style="text-align:center">
-      <svg id="barGraphSVG"></svg>
+      <svg id="barGraphSVG">
+        <g id="xbar-axis"></g>
+        <g id="ybar-axis"></g>
+        <g id="bars"></g>
+      </svg>
     </div>
   
 
