Line-graph done for milestone

--- a/flixHunters/index.html
+++ b/flixHunters/index.html
@@ -4,10 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <style>
-
+    html {
+      font-family: sans-serif;
+    }
   </style>
   
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  
 
   <script src="js/barGraphView.js"></script>
   <script src="js/lineGraphView.js"></script>
