--- a/flixHunters/index.html
+++ b/flixHunters/index.html
@@ -7,6 +7,25 @@
     html {
       font-family: sans-serif;
     }
+    body {
+      background-image: linear-gradient(90deg, rgba(229,9,20,1) 5%, rgba(0, 0, 0, 1) 95%);
+      
+      padding: 10px;
+    }
+    #wrapper {
+      background-color: white;
+      border-radius: 5px;
+      width: 100%;
+    }
+    header > * {
+      display: inline-block;
+      text-align: center;
+      width: 100%;
+    }
+    select {
+      display: inline-block;
+      align-self: center;
+    }
   </style>
   
   <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -24,37 +43,40 @@
 </head>
 
 <body>
-    <div>
-        <header>
-            <h1>Maturity ratings through the years: a Netflix analysis</h1>
-            <div>Names: Tayler Tolman, Albert Frei, Gregorius Sukiman</div>
-        </header>
-    </div>
-    <select name="graphType" id="graphToggle" onchange="toggleGraphs()">   
-      <option value="scatter">Scatterplot</option>
-      <option value="line">Line Graph</option>
-    </select>
-    <div style="text-align:center">
-      <svg id="lineGraphSVG" style="display:none">
-        <g id="x-axis"></g>
-        <g id="y-axis"></g>
-        <g id="lines"></g>
-      </svg>
-      <svg id="scatterGraphSVG" >
-        <g id="x-axis"></g>
-        <g id="y-axis"></g>
-      </svg>
-      <svg id="donutSVG"></svg>
-    </div>
-    <div style="text-align:center">
-      <svg id="barGraphSVG">
-        <g id="xbar-axis"></g>
-        <g id="ybar-axis"></g>
-        <g id="bars"></g>
-      </svg>
+  <div id="wrapper">
+    <div id="content">
+      <div id="header">
+          <header>
+              <h1>Maturity ratings through the years: a Netflix analysis</h1>
+              <div>Names: Tayler Tolman, Albert Frei, Gregorius Sukiman</div>
+          </header>
+      </div>
+      <select name="graphType" id="graphToggle" onchange="toggleGraphs()"> 
+        <option value="scatter">Scatterplot</option>
+        <option value="line">Line Graph</option> 
+      </select>
+      <div style="text-align:center">
+        <svg id="lineGraphSVG" style="display:none">
+          <g id="x-axis"></g>
+          <g id="y-axis"></g>
+          <g id="lines"></g>
+        </svg>
+        <svg id="scatterGraphSVG" >
+          <g id="x-axis"></g>
+          <g id="y-axis"></g>
+        </svg>
+        <svg id="donutSVG"></svg>
+      </div>
+      <div style="text-align:center">
+        <svg id="barGraphSVG">
+          <g id="xbar-axis"></g>
+          <g id="ybar-axis"></g>
+          <g id="bars"></g>
+        </svg>
+      </div>
     </div>
   
-
+  </div>
 </body>
 
 </html>
