--- a/flixHunters/index.html
+++ b/flixHunters/index.html
@@ -16,6 +16,7 @@
       background-color: white;
       border-radius: 5px;
       width: 100%;
+      border-style: solid;
     }
     header > * {
       display: inline-block;
@@ -25,6 +26,7 @@
     select {
       display: inline-block;
       align-self: center;
+      margin-left: 5%;
     }
   </style>
   
