capitalized the title

--- a/flixHunters/index.html
+++ b/flixHunters/index.html
@@ -59,7 +59,7 @@
     <div id="content">
       <div id="header">
           <header>
-              <h1>Maturity ratings through the years: a Netflix analysis</h1>
+              <h1>Maturity Ratings Through the Years: A Netflix Analysis</h1>
               <div>Names: Tayler Tolman, Albert Frei, Gregorius Sukiman</div>
           </header>
       </div>
