Started line overlay, unfinished

--- a/flixHunters/index.html
+++ b/flixHunters/index.html
@@ -74,6 +74,7 @@
             <g id="x-axis"></g>
             <g id="y-axis"></g>
             <g id="lines"></g>
+            <g id="overlay"><line></line></g>
           </svg>
           <svg id="scatterGraphSVG" >
             <g id="x-axis"></g>
