--- a/flixHunters/index.html
+++ b/flixHunters/index.html
@@ -30,7 +30,7 @@
     }
     #graphDonut {
       display: inline-flex;
-      align-items: left;
+      align-items: right;
       width: 100%;
     }
     #donutSVG {
