added an intro some animations and style choices

--- a/flixHunters/index.html
+++ b/flixHunters/index.html
@@ -43,6 +43,17 @@
       align-items: right;
       width: 100%;
     }
+    #intro {
+      align-items: center;
+      padding-right: 20%;
+      padding-left: 20%;
+      margin-bottom: 20px;
+    }
+    #introContent {
+      align-items: center;
+      text-align: center;
+      border-bottom: solid;
+    }
   </style>
   
   <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -65,9 +76,18 @@
     <div id="content">
       <div id="header">
           <header>
-              <h1>Maturity Ratings Through the Years: A Netflix Analysis</h1>
-              <div>Names: Tayler Tolman, Albert Frei, Gregorius Sukiman</div>
+              <h1>A Netflix Analysis</h1>
+              <div>By: Tayler Tolman, Albert Frei, Gregorius Sukiman</div>
           </header>
+      </div>
+      <div id="intro">
+        <div id="introContent">
+          <p>
+            In 2017, Netflix's CEO claimed that Netflix's biggest competitor was sleep. Netflix
+            is indeed very popular. By joining two data sources, one from Netflix and one from IMDB, we are able to
+            explore questions about this very popular product. 
+          </p>
+        </div>
       </div>
       <select name="graphType" id="graphToggle" onchange="toggleGraphs()"> 
         <option value="scatter">Scatterplot</option>
