--- a/flixHunters/index.html
+++ b/flixHunters/index.html
@@ -87,7 +87,14 @@
             is indeed very popular. By joining two data sources, one from Netflix and one from IMDB, we are able to
             explore questions about this very popular product. 
           </p>
+          <div>
+            see demo video <a href="https://www.youtube.com/watch?v=PQ-dJceq7qw&ab_channel=TaylerTolman"> Here </a>
+          </div>
+          <div>
+            See process book <a href="https://github.com/Nathan-Joe/dataviscourse-pr-FlixHunters/tree/main/flixHunters"> Here </a>
+          </div>
         </div>
+       
       </div>
       <select name="graphType" id="graphToggle" onchange="toggleGraphs()"> 
         <option value="scatter">Scatterplot</option>
