--- a/flixHunters/index.html
+++ b/flixHunters/index.html
@@ -88,10 +88,10 @@
             explore questions about this very popular product. 
           </p>
           <div>
-            see demo video <a href="https://www.youtube.com/watch?v=PQ-dJceq7qw&ab_channel=TaylerTolman"> Here </a>
+            See Demo Video <a href="https://www.youtube.com/watch?v=PQ-dJceq7qw&ab_channel=TaylerTolman"> Here </a>
           </div>
           <div>
-            See process book <a href="https://github.com/Nathan-Joe/dataviscourse-pr-FlixHunters/tree/main/flixHunters"> Here </a>
+            See Process Book <a href="https://github.com/Nathan-Joe/dataviscourse-pr-FlixHunters/tree/main/flixHunters"> Here </a>
           </div>
         </div>
        
